ferro-projections/tests/snapshots/catalog__canonical_analyze.snap
---
source: ferro-projections/tests/catalog.rs
expression: redacted_signals(&scores)
---
- intent: Analyze
  signals:
    - datetime_numeric_cooccurrence
- intent: Summarize
  signals:
    - money_fields
- intent: Focus
  signals:
    - more_readable_than_writable
    - baseline
- intent: Browse
  signals:
    - baseline
